--- a/apps/mrc-doc/src/app/(with-menu)/components/rmarker/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/components/rmarker/page.mdx
@@ -1,65 +1,63 @@
 export const metadata = {
   title: 'RMarker',
-  description: 'wrapper for the marker object'
+  description: 'wrapper for the Marker object'
 };
+
+import TwoCols from "~/components/TwoCols.tsx";
+import ShikiContent from "~/components/ShikiContent";
 
 # RMarker
 
+This component wraps a MapLibre Marker object. He manages its life cycle and is
+responsible for adding/removing it to the map. For this reason this component
+must be a descendant of `RMap`.
+
 ## Usage
 
+import Basic from "./Basic.tsx";
+import basicCode from "./Basic.extract.tsx?code";
+
+<TwoCols first={<ShikiContent html={basicCode} />} second={<Basic />} />
+
+If you use a custom marker element don't forgot to memoize the component.
+
 ```tsx
-import { RMap, RMarker} from "maplibre-react-components";
+// CustomMarker.tsx
+import { memo } from "react";
 
-function App() {
+// https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.
+const ICON = `M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z`;
 
-  const [markerCoords, setMarkerCoords] = useState<[number, number]>([6.037, 46.175])
-
-  const handleDragEnd = useCallback((e: Event<Marker>) => {
-    setMarkerCoords(e.target.getLngLat().toArray())
-  }, []);
-
+function CustomMarker() {
   return (
-    <RMap>
-      <RMarker longitude={6} latitude={46} />
-
-      {/* reactive controlled marker */}
-      <RMarker
-        longitude={markerCoords[0]}
-        latitude={markerCoords[1]}
-        draggable={true}
-        onDragEnd={handleDragEnd}
-      />
-
-      {/* with custom Element */}
-      <RMarker longitude={6} latitude={46}>
-        <MemoPin />
-      </RMarker>
-    </RMap>
-  );
-}
-
-const ICON = `M20.2,15.7L20.2,15.7c1.1-1.6,1.8-3.6,1.8-5.7c0-5.6-4.5-10-10-10S2,4.5,2,10c0,2,0.6,3.9,1.6,5.4c0,0.1,0.1,0.2,0.2,0.3
-  c0,0,0.1,0.1,0.1,0.2c0.2,0.3,0.4,0.6,0.7,0.9c2.6,3.1,7.4,7.6,7.4,7.6s4.8-4.5,7.4-7.5c0.2-0.3,0.5-0.6,0.7-0.9
-  C20.1,15.8,20.2,15.8,20.2,15.7z`;
-
-const pinStyle = {
-  cursor: "pointer",
-  fill: "#d00",
-  stroke: "none",
-};
-
-function Pin() {
-  return (
-    <svg height={20} viewBox="0 0 24 24" style={pinStyle}>
+    <svg
+      height={30}
+      viewBox="0 0 384 512"
+      style={{ cursor: "pointer", fill: "#DBA726" }}
+    >
       <path d={ICON} />
     </svg>
   );
 }
-const MemoPin = memo(Pin)
+export default memo(CustomMarker);
 ```
+
+## Draggable controlled component
+
+If your marker component is draggable, you need to register a handler for the `dragend` or `drag` event
+to update the state.
+
+import Controlled from "./Controlled.tsx";
+import controlledCode from "./Controlled.extract.tsx?code";
+
+<TwoCols foreground="second" first={<Controlled />} second={<ShikiContent html={controlledCode} />} />
+
+
 
 ## Reference
 
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-4 my-4">
+<div className="row-span-3">
 ```ts
 type RMarkerProps =
   {
@@ -72,31 +70,34 @@ type RMarkerProps =
   } &
 
   /**
-   * Non reactive marker options that are only used when instantiating a marker object
-   * they have the same name as in MarkerOptions with first letter uppercase
-   * and prefixed with "initial"
+   * Non reactive marker options (only used during instantiation)
+   * prefixed with "initial" + first letter uppercase
    */
   MarkerInitialOptions &
+
+
   /**
-   * Reactive marker options. Update during the RMarker lifecycle causes them to be
-   * updated on the marker instance
+   * Reactive marker options.
    * they have the same name as in MarkerOptions
    */
   MarkerReactiveOptions &
 
+
   /**
    * Listenners for marker events
-   * they have the same name as in MarkerOptions with first letter uppercase and prefixed
-   * with "on"
+   * prefixed with "on" + first letter uppercase
    */
   MarkerCallbacks;
-
+```
+</div>
+```ts
 type MarkerInitialOptions = {
   initialAnchor?: PositionAnchor;
   initialColor?: string;
   initialScale?: number;
 };
-
+```
+```ts
 type MarkerReactiveOptions = {
   className?: string;
   offset?: PointLike;
@@ -108,7 +109,8 @@ type MarkerReactiveOptions = {
   opacity?: string;
   opacityWhenCovered?: string;
 };
-
+```
+```ts
 type MarkerCallbacks = {
   onDragStart?: (e: Event<Marker>) => void;
   onDrag?: (e: Event<Marker>) => void;
@@ -118,3 +120,4 @@ type MarkerCallbacks = {
   onClick?: (e: MouseEvent) => void;
 }
 ```
+</div>
