--- a/apps/mrc-doc/src/app/(with-menu)/components/rpopup/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/components/rpopup/page.mdx
@@ -3,69 +3,51 @@ export const metadata = {
   description: 'wrapper for the popup object'
 };
 
+import TwoCols from "~/components/TwoCols.tsx";
+import ShikiContent from "~/components/ShikiContent";
+
+
 # RPopup
 
 ## Usage
 
-```tsx
-import { RMap, RPopup, RMarker, markerPopupOffset } from "maplibre-react-components";
+import Basic from "./Basic.tsx";
+import basicCode from "./Basic.extract.tsx?code";
 
-const town = { lng: 6, lat: 46 };
+<TwoCols first={<ShikiContent html={basicCode} />} second={<Basic />} />
 
-function App() {
-  const [showPopup, setShowPopup] = useState(false);
 
-  return (
-    <RMap initialCenter={town} initialZoom={8}>
-      <RPopup longitude={town.lng} latitude={town.lat}>
-        Hello world !
-      </RPopup>
+## Closable Popup
 
-      {/* closable Popup */}
-      {showPopup && (
-        <RPopup
-          longitude={town.lng}
-          latitude={town.lat}
-          onMapMove={() => setShowPopup(false)}
-          onMapClick={() => setShowPopup(false)}
-        >
-          Hello world !
-        </RPopup>
-      )}
+For compatibility some options from `PopupOptions` are not
+available : `closeButton`, `closeOnClick`, `closeOnMove`. Without these
+deactivations, this could result map's state to deviate from its props.
 
-      {/* marker with his popup */}
-      <RMarker
-        longitude={town.lng}
-        latitude={town.lat}
-        onClick={(e) => {
-          e.stopPropagation();
-          setShowPopup((s) => !s);
-        }}
-      />
-      {showPopup && (
-        <RPopup
-          longitude={town.lng}
-          latitude={town.lat}
-          onMapClick={() => setShowPopup(false)}
-          onMapMove={() => setShowPopup(false)}
-          offset={markerPopupOffset}
-        >
-          Hello world !
-        </RPopup>
-      )}
-    </RMap>
+As an alternative, you can listen to events `onMapClick`, `onMapMove`.
 
-  )
-}
-```
+import Closable from "./Closable.tsx";
+import closableCode from "./Closable.extract.tsx?code";
+
+<TwoCols foreground="second" first={<Closable />} second={<ShikiContent html={closableCode} />} />
+
+rather use these listeners on the `RPopup` component rather than on `RMap` because they are unregistered when the popup is hidden.
+
+## Popup with Marker
+
+import WithMarker from "./WithMarker.tsx";
+import withMarkerCode from "./WithMarker.extract.tsx?code";
+
+<TwoCols first={<ShikiContent html={withMarkerCode} />} second={<WithMarker />} />
+
+you can import the `markerPopupOffset` utility object from the lib, based on default MapLibre Marker height.
+
+
 
 ## Reference
 
-For compatibility some popup options are disabled : `closeButton`, `closeOnClick`, `closeOnMove`. Without these deactivations, this could result map's state to deviate from its props.
 
-As an alternative, you can listen to events `onMapClick`, `onMapMove`
-
-
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-4 my-4">
+<div className="row-span-3">
 ```ts
 type RPopupProps =
   {
@@ -76,42 +58,45 @@ type RPopupProps =
      */
     children?: ReactNode;
   } &
-
   /**
-   * Non reactive marker options that are only used when instantiating a marker object
-   * they have the same name as in MarkerOptions with first letter uppercase
-   * and prefixed with "initial"
+   * Non reactive popup options (only used during instantiation)
+   * prefixed with "initial" + first letter uppercase
    */
   PopupInitialOptions &
   /**
-   * Reactive marker options. Update during the RMarker lifecycle causes them to be
-   * updated on the marker instance
-   * they have the same name as in MarkerOptions
+   * Reactive popup options.
+   * they have the same name as in MapOptions
    */
   PopupReactiveOptions &
-
   /**
-   * Listenners for marker events
-   * they have the same name as in MarkerOptions with first letter uppercase and prefixed
-   * with "on"
+   * Listenners for popup events
+   * prefixed with "on" + first letter uppercase
    */
   PopupCallbacks;
-
-
+```
+</div>
+```ts
 type PopupInitialOptions = {
   initialFocusAfterOpen?: boolean;
   initialAnchor?: PositionAnchor;
   initialSubpixelPositioning?: boolean;
 };
 
+```
+```ts
 type PopupReactiveOptions = {
   className?: string;
   offset?: PointLike;
   maxWidth?: string;
 };
 
+```
+```ts
 type PopupCallbacks = {
   onMapClick?: (e: MapLayerMouseEvent) => void;
   onMapMove?: (e: MapLibreEvent<MouseEvent | TouchEvent | WheelEvent | undefined>) => void;
 }
+
+
 ```
+</div>
