--- a/apps/mrc-doc/src/app/(with-menu)/hooks/usercontrol/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/hooks/usercontrol/page.mdx
@@ -3,37 +3,31 @@ export const metadata = {
   description: 'hook to add React Control inside RMap'
 };
 
+import TwoCols from "~/components/TwoCols.tsx";
+import ShikiContent from "~/components/ShikiContent";
+import { Flash } from "pentatrion-design/components/flash"
+
 # useRControl
 
-Hook to add React Control inside MapLibre
+Hook to add React Control inside MapLibre.
+
+Although it is possible to add components as children of `RMap` these will be added
+as children of the `div.maplibregl-children` element (see [RMap: Children components](/rmap#children-components)
+
+This hook combined with [createPortal](https://react.dev/reference/react-dom/createPortal) allows you to create custom controls that will integrate perfectly into your map.
+
+<Flash color="orange">
+As this hook use React Context internally you can't use this hook in the component using `RMap` but only in child component.
+</Flash>
 
 ## Usage
 
-```tsx
-import { RMap, useRControl } from "maplibre-react-components";
+import Basic from "./Basic.tsx";
+import basicCode from "./Basic.extract.tsx?code";
 
-function CustomControl() {
-  const { container } = useRControl({
-    position: "bottom-left"
-  });
+<TwoCols first={<ShikiContent html={basicCode} />} second={<Basic />} />
 
-  return createPortal(
-    <>
-      <h3>Custom control</h3>
-      <div>add your content</div>
-    </>,
-    container
-  );
-}
 
-function App() {
-  return (
-    <RMap>
-      <CustomControl />
-    </RMap>
-  );
-}
-```
 
 ## Reference
 
