design add Range and update mrc-doc

--- a/apps/mrc-doc/src/app/(with-menu)/components/rterrain/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/components/rterrain/page.mdx
@@ -13,7 +13,7 @@ import ShikiContent from "~/components/ShikiContent";
 import Basic from "./Basic.tsx";
 import basicCode from "./Basic.extract.tsx?code";
 
-<TwoCols first={<ShikiContent html={basicCode} />} second={<Basic />} />
+<TwoCols first={<ShikiContent html={basicCode} />} second={<Basic />} firstClassName="[&_pre]:max-h-96 [&_pre]:overflow-auto" />
 
 ## Incompatibility `RTerrain` / `RTerrainControl`.
 
