--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -88,7 +88,8 @@
     "profile": "Mode de transport",
     "direction": "Sens de parcours",
     "isochrone": "Isochrone",
-    "isodistance": "Isodistance"
+    "isodistance": "Isodistance",
+    "referenceFeature": "Point de référence"
   },
   "constraints": {
     "avoid": "Éviter",
